fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ html, body {
  }
 
  .topmargin {
-    margin-top: 100px;
+    margin-top: 150px;
  }
 
  .todo {
